Fixed blog dropdown going off screen

--- a/wp-content/themes/rr/style.css
+++ b/wp-content/themes/rr/style.css
@@ -1384,6 +1384,11 @@ section[role="trusted"] .wrap ul li {
  word-wrap: normal;       /* Internet Explorer 5.5+ */
 }
 
+.lastnav ul.sub-menu {
+  right: 4px;
+  background: url("img/selector2-respon.jpg") no-repeat scroll 0 0 #FAFBFC;
+  width: 129px;
+}
 
 /** Blog **/
 
